--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -499,6 +499,8 @@
                             <li><a href="table-filter.html">Puntos de venta</a></li>
                             <li><a href="table-filter.html">Equipo de transporte</a></li>                       
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
+                            <li>@Html.ActionLink("Producto", "Categoria", "Producto")</li>
+
                         </ul>
                     </li>
                 </ul>
