--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Categoria.cshtml
@@ -1,17 +1,40 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.CategoriaProductoDTO
-
-
+@{
+    string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
+}
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Categoria</title>
+    <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
+    <script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+    <script>
+        $(document).ready(function () {            
+            $(".filterable tr:has(td)").each(function () {
+                var t = $(this).text().toLowerCase(); 
+                $("<td class='indexColumn'></td>")
+                 .hide().text(t).appendTo(this);
+            });
+            $("#txtNumeroFiltro").keyup(function () {
+                var s = $(this).val().toLowerCase().split(" ");                
+                $(".filterable tr:hidden").show();
+                $.each(s, function () {
+                    $(".filterable tr:visible .indexColumn:not(:contains('"
+                       + this + "'))").parent().hide();
+                });//each
+            });//key up.
+        });//document.ready
+
+    </script>
+
 </head>
 <body>
     <div>
         @using (Html.BeginForm("CrearCategoria", "Producto", FormMethod.Post))
         {
+            @Html.HiddenFor(m => m.IdEmpresa)
+            @Html.HiddenFor(m => m.IdCategoria)
             <section class="content">
                 <div class="container-fluid">
                     <div class="block-header">
@@ -31,19 +54,136 @@
                                         <h2><strong>Crear</strong> nueva categoría</h2>
                                     </div>
                                     <div class="body">
-
+                                        <div class="row clearfix">
+                                            <div class="col-sm-4">
+                                                <b>Gasera:</b>
+                                                @if (ViewBag.EsAdmin)
+                                                {
+                                                    <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                        @foreach (var lst in ViewBag.Empresas)
+                                                        {
+                                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                        }
+                                                    </select>
+                                                }
+                                                else
+                                                {
+                                                    <input type="text" class="form-control " disabled value="@ViewBag.Empresas" />
+                                                }
+                                                @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <b>Nombre:</b>
+                                                    @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control", placeholder = "Nombre de la categoria" })
+                                                    @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "alert-danger" })
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row clearfix">
+                                            <div class="col-md-6">
+                                                <b>Descripción:</b>
+                                                @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", placeholder = "Descripción" })
+                                                @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
+                                            </div>
+                                            <div class="col-md-1">
+                                                <b>&nbsp; </b>
+                                                <div class="form-group">
+                                                    @if (ViewBag.EsEdicion == null)
+                                                    {
+                                                        <button btn id="BtnCrear" formaction="CrearCategoria" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                                            <i class="zmdi zmdi-plus"></i>
+                                                        </button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button btn id="btnUpDate" formaction="EditarCategoria" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                                            <i class="zmdi zmdi-swap"></i>
+                                                        </button>
+                                                    }
+                                                </div>
+                                            </div>
+                                        </div>
+                                        @if (ViewBag.MensajeError != null)
+                                        {
+                                            <br />
+                                            <div id="DivAlerta" class="container">
+                                                <div class="alert alert-danger">
+                                                    <div class="alert-icon">
+                                                        <i class="zmdi zmdi-block"></i>
+                                                    </div>
+                                                    <strong>
+                                                        @ViewBag.MensajeError
+                                                    </strong>
+                                                </div>
+                                            </div>
+                                        }
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="card">
                                     <div class="header">
-
                                     </div>
                                     <div class="body">
+                                        <div class="row clearfix">
+                                            <div class="col-sm-4">
+                                                @if (ViewBag.EsAdmin)
+                                                {
+                                                    <select id="ddlEmpresasFilter" class="form-control show-tick" data-live-search="true">
+                                                        @foreach (var lst in ViewBag.Empresas)
+                                                        {
+                                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                        }
+                                                    </select>
+                                                }
+                                                else
+                                                {
+                                                    <input type="text" class="form-control" disabled value="@ViewBag.Empresas" />
+                                                }
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group">
+                                                    <input type="text" placeholder="Numero" id="txtNumeroFiltro" class="form-control" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row clearfix">
+                                            <div class="table-responsive">
+                                                <table class="table table table-bordered table-striped table-hover js-basic-example dataTable filterable" name="RequisicionProductos">
+                                                    <thead>
+                                                        <tr>
+                                                            <td><b>Nombre</b></td>
+                                                            <td><b>Descripción</b></td>
+                                                            <td><b>Accion</b></td>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @foreach (var cat in ViewBag.Categorias)
+                                                        {
+                                                            <tr>
+                                                                <td>@cat.Nombre </td>
+                                                                <td>@cat.Descripcion </td>
+                                                                <td>
+                                                                    <a href="@Url.Action("EditarCategoria", "Producto", new { Id = cat.IdCategoria })">
+                                                                        <i class="material-icons">edit</i>
+                                                                        <span class="icon-name"></span>
+                                                                    </a>
+                                                                    <a href="@Url.Action("EliminarCategoria", "Producto", new { Id = cat.IdCategoria})">
+                                                                        <i class="material-icons">delete</i>
+                                                                        <span class="icon-name"></span>
+                                                                    </a>
 
+                                                                </td>
+                                                            </tr>
+                                                        }
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +191,6 @@
                     </div>
                 </div>
             </section>
-
         }
     </div>
 </body>
