--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -461,7 +461,7 @@
                             </div>
                             <div class="detail">
                                 <h6>
-                                    <asp:Label  ID="lblNombre" Text="Michael" />
+                                    <asp:Label ID="lblNombre" Text="Michael" />
                                 </h6>
                                 <p class="m-b-0">
                                     <asp:Label ID="lblUsuario" Text="-----"></asp:Label>
@@ -474,7 +474,7 @@
                     <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisicion</span> </a></li>
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
-                        <ul class="ml-menu">                            
+                        <ul class="ml-menu">
                             <li><a href="@Url.Action("Ordenes", "OrdenCompra")">Orden de Compra </a></li>
                         </ul>
                     </li>
@@ -493,24 +493,35 @@
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-grid"></i><span>Catalogos</span></a>
                         <ul class="ml-menu">
+                            <li>
+                                <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">content_paste</i><span>Producto</span> </a>
+                                <ul class="ml-menu">
+                                    <li>@Html.ActionLink("Producto", "Producot", "Producto")</li>
+                                    <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
+                                    <li>@Html.ActionLink("Unidad de Medidad", "UnidadPedida", "Producto")</li>
+                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
+                                </ul>
+
+                               
+                            </li>
                             <li><a href="../../Catalogos/Vista/Proveedor.aspx">Proveedores</a></li>
                             <li>@Html.ActionLink("Centros de costos", "CentroCosto", "CentroCosto")</li>
-                            <li>@Html.ActionLink("Cuentas contables", "CuentaContable", "CuentaContable")</li>                          
+                            <li>@Html.ActionLink("Cuentas contables", "CuentaContable", "CuentaContable")</li>
                             <li><a href="table-filter.html">Puntos de venta</a></li>
-                            <li><a href="table-filter.html">Equipo de transporte</a></li>                       
+                            <li><a href="table-filter.html">Equipo de transporte</a></li>
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
-                            <li>@Html.ActionLink("Producto", "Categoria", "Producto")</li>
+
 
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-    </aside>   
+    </aside>
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/Scripts/jquery-ui.js")
-    @Scripts.Render("~/Scripts/DatePickerReady.js")    
+    @Scripts.Render("~/Scripts/DatePickerReady.js")
     <script src="~/assets/bundles/libscripts.bundle.js"></script>
     <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
     <script src="~/assets/bundles/mainscripts.bundle.js"></script>
