--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
 </head>
-<body class="theme-black menu_dark">
+<body class="theme-black menu_dark"  style="overflow: auto;padding-top:10px">
     @RenderBody()
     <div class="overlay_menu">
         <button class="btn btn-primary btn-icon btn-icon-mini btn-round"><i class="zmdi zmdi-close"></i></button>
@@ -498,7 +498,7 @@
                                 <ul class="ml-menu">
                                     <li>@Html.ActionLink("Producto", "Producot", "Producto")</li>
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
-                                    <li>@Html.ActionLink("Unidad de Medidad", "UnidadPedida", "Producto")</li>
+                                    <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
                                     <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
                                 </ul>
 
@@ -510,8 +510,6 @@
                             <li><a href="table-filter.html">Puntos de venta</a></li>
                             <li><a href="table-filter.html">Equipo de transporte</a></li>
                             <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
-
-
                         </ul>
                     </li>
                 </ul>
